<resources>
    <string name="app_name">PR Calibradores</string>

    <!-- Login -->
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="login_button_text">Acceder</string>
    <string name="login_bad_credentials_title">Credenciales de usuario incorrectas</string>
    <string name="login_bad_credentials_message">Por favor revisa que tu nombre de usuario o contraseña sean correctos</string>

    <!-- Main -->
    <string name="main_new_process">Nuevo Proceso</string>
    <string name="main_scan_model">Buscar Pieza</string>
    <string name="menu_title_log_out">Log out</string>

    <!-- Projects -->
    <string name="projects_label_id">ID:</string>
    <string name="projects_label_name">Nombre:</string>
    <string name="projects_label_start_date">Fecha de inicio:</string>
    <string name="projects_label_dead_line">Fecha de término:</string>
    <string name="projects_label_status">Estado:</string>
    <string name="projects_empty_list">No proyectos registrados</string>

    <!-- Models -->
    <string name="models_empty_list">No hay modelos registrados para este proyecto</string>
    <string name="models_label_id_id">ID:</string>
    <string name="models_label_id_name">Nombre:</string>
    <string name="models_label_id_description">Descripción:</string>
    <string name="models_dialog_title">Elige una pieza</string>
    <string name="models_label_pieces">Piezas por hacer:</string>
    <string name="models_label_finished_pieces">Piezas finalizadas:</string>

    <!-- Process -->
    <string name="process_progress_layout_text">Registrando nueva pieza</string>
    <string name="process_dialog_finished_title">Proceso terminado</string>
    <string name="process_dialog_finished_progress_text">Registrando tiempo de proceso</string>
    <string name="dialog_next_process_text">Siguiente proceso: %1$s</string>
    <string name="dialog_new_piece">¿Desea hacer otra pieza?</string>
    <string name="dialog_finished_text_registro_exitoso">Registro exitoso</string>
    <string name="dialog_finished_pieces">Piezas por hacer: %1$d</string>
    <string name="dialog_finished_finished_pieces">Piezas finalizadas: %1$d</string>
    <string name="dialog_finished_negative_button">Salir</string>

    <!-- Process -->
    <string name="process_progress_layout_text">Registrando nueva pieza</string>
    <string name="process_dialog_finished_title">Proceso terminado</string>
    <string name="process_dialog_finished_progress_text">Registrando tiempo de proceso</string>
    <string name="dialog_next_process_text">Siguiente proceso: %1$s</string>
    <string name="dialog_new_piece">¿Desea hacer otra pieza?</string>
    <string name="dialog_finished_text_registro_exitoso">Registro exitoso</string>

</resources>
